--- a/logger/CMakeLists.txt
+++ b/logger/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required (VERSION 2.6)
 project (Logger)
 
 # Compiler flags
-set (CMAKE_CXX_FLAGS "-std=c++11 -W -Wall")
+set (CMAKE_CXX_FLAGS "-std=c++11 -W -Wall -g")
 
 set (SOURCES 
   "ALogger.cpp"
