Move code and includes to folders

--- a/logger/CMakeLists.txt
+++ b/logger/CMakeLists.txt
@@ -4,12 +4,14 @@ project (Logger)
 # Compiler flags
 set (CMAKE_CXX_FLAGS "-std=c++11 -W -Wall -g")
 
-set (SOURCES 
-  "ALogger.cpp"
-  "DefaultFilter.cpp"
-  "DefaultFormatter.cpp"
-  "LogMgr.cpp"
-  "StdoutLogger.cpp"
+include_directories ("${PROJECT_SOURCE_DIR}/includes")
+
+set (SOURCES
+  "src/ALogger.cpp"
+  "src/DefaultFilter.cpp"
+  "src/DefaultFormatter.cpp"
+  "src/LogMgr.cpp"
+  "src/StdoutLogger.cpp"
 )
 
 add_library(Logger ${SOURCES})
