* Fix a lot of bugs

--- a/logger/CMakeLists.txt
+++ b/logger/CMakeLists.txt
@@ -13,6 +13,7 @@ set (SOURCES
   "src/DefaultFormatter.cpp"
   "src/LogMgr.cpp"
   "src/StdoutLogger.cpp"
+  "src/StderrLogger.cpp"
   "src/Log.cpp"
 )
 
